[package]
name = "pbjson-build"
version = "0.5.1"
authors = ["Raphael Taylor-Davies <r.taylordavies@googlemail.com>"]
edition = "2021"
description = "Generates Serialize and Deserialize implementations for prost message types"
license = "MIT"
keywords = ["protobuf", "json", "serde"]
categories = ["encoding"]
repository = "https://github.com/influxdata/pbjson"

[dependencies]
heck = "0.4"
prost = {version = "0.11", git = "https://github.com/NAlexPear/prost.git", branch = "extensions" }
prost-types = {version = "0.11", git = "https://github.com/NAlexPear/prost.git", branch = "extensions" }
itertools = "0.10"

[dev-dependencies]
tempfile = "3.1"
